1. Nineteen68#2070 -Production_CNA: In HTML Report Page, Alignment of table 2.Nineteen68#2071 Production_CNA: Few Minor issues in Mindmap opened in FF. 3. Nineteen68#2123 Production_CNA - Assign popup is not getting closed if we click anywhere in the page Firefox browser

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -700,7 +700,7 @@ input[type="radio"]{
     font-size: 14px;
     border-radius: 20px;
     height: 25px;
-    width: 75px;
+    width: 80px;
     background: #a08ab7;
     color: white;
     font-weight: lighter;
